[package]
name = "include-crypt-bytes"
version = "0.1.3"
authors = ["BreakpointNinja <ninja@breakpoint.ninja>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust macro to embed encrypted files in compiled binary"
repository = "https://github.com/breakpointninja/include-crypt-bytes"
readme = "README.md"
keywords = ["proc-macro", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
include-crypt-bytes-cipher = { path = "include-crypt-bytes-cipher", version = "0.1" }
include-crypt-bytes-macro = { path = "include-crypt-bytes-macro", version = "0.1" }
